test/runnable/imports/link8072b.d
module imports.link8072b;
import link8072;
