test/fail_compilation/imports/a17630.d
module imports.a17630;

import b17630;
